Refactor project-sync.yml to simplify field handling
Copilot second chance after repllacing code for ProjectV2 compatibility

--- a/.github/workflows/project-sync.yml
+++ b/.github/workflows/project-sync.yml
@@ -48,11 +48,14 @@ jobs:
                       fields(first: 100) {
                         nodes {
                           __typename
-                          ... on ProjectV2SingleSelectField { id name options { id name } }
-                          ... on ProjectV2NumberField       { id name }
-                          ... on ProjectV2TextField         { id name }
-                          ... on ProjectV2DateField         { id name }
-                          ... on ProjectV2IterationField    { id name configuration { iterations { id title } } }
+                          id
+                          name
+                          ... on ProjectV2SingleSelectField {
+                            options { id name }
+                          }
+                          ... on ProjectV2IterationField {
+                            configuration { iterations { id title } }
+                          }
                         }
                       }
                     }
