Modify CI workflow to include main branch
Updated CI workflow to trigger on both main and develop branches for push and pull request events.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,13 @@ name: CI - Build & Tests
 
 on:
   push:
-    branches: [ develop ]
+    branches:
+        - main
+        - develop
   pull_request:
-    branches: [ main, develop ]
-
+    branches: 
+        - main
+        - develop
 jobs:
   build-and-test:
     runs-on: windows-latest
