Refactor GitHub Actions workflow for deployment

--- a/.github/workflows/deploy-relay.yml
+++ b/.github/workflows/deploy-relay.yml
@@ -10,27 +10,17 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     env:
-      APP_NAME: rimp-orch-relay                 # si tu Function App tiene otro nombre, cámbialo
       PROJECT_PATH: orchestrator-relay
       PUBLISH_DIR: publish
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+      - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-
-      - name: Restore
-        run: dotnet restore $PROJECT_PATH
-
-      - name: Publish
-        run: dotnet publish $PROJECT_PATH -c Release -o $PUBLISH_DIR
-
+      - run: dotnet restore $PROJECT_PATH
+      - run: dotnet publish $PROJECT_PATH -c Release -o $PUBLISH_DIR
       - name: Deploy to Azure Functions
         uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ env.APP_NAME }}
           publish-profile: ${{ secrets.AZUREAPPSVC_PUBLISH_PROFILE }}
           package: ${{ env.PUBLISH_DIR }}
-
